--- a/circle.yml
+++ b/circle.yml
@@ -1,2 +1,8 @@
 # Circle CI should automatically run the tests.
 # For configuration options, visit: https://circleci.com/docs/configuration/
+machine:
+   environment:
+     ANDROID_HOME: /usr/local/android-sdk-linux
+test:
+  override:
+    - chmod+x ./gradlew test
