--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,5 @@
 # Circle CI should automatically run the tests.
 # For configuration options, visit: https://circleci.com/docs/configuration/
-machine:
-   environment:
-     ANDROID_HOME: /usr/local/android-sdk-linux
-dependencies:
-  pre: 
-  chmod+x gradlew
+checkout:
+  post:
+    - chmod +x ./gradlew
