--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,17 @@
 language: android
-sudo: true
+jdk:
+    - oraclejdk7
+android:
+  components:
+    - build-tools-22.0.1
+    - android-22
+    - extra
+    - addon
+    - sys-img-armeabi-v7a-android-22
+before_script:
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
+script:
+    - ./gradlew connectedAndroidTest
