--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ android:
     - extra
     - addon
     - sys-img-armeabi-v7a-android-22
+before_install:
+ - chmod +x gradlew
+ - gradle install
+
 before_script:
   - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
