--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ android:
     - sys-img-armeabi-v7a-android-19
 before_install:
  - chmod +x gradlew
- - gradle install
 
 before_script:
   - echo no | android create avd --force -n test -t android-19 --abi armeabi-v7a
@@ -18,4 +17,5 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 script:
+    - gradle wrapper
     - ./gradlew connectedAndroidTest
