--- a/circle.yml
+++ b/circle.yml
@@ -3,4 +3,7 @@
 checkout:
   post:
     - chmod +x ./gradlew
-    - gradle wrapper
+    - gradle assembleAndroidTest
+    - adb wait-for-device push ./TesterLib/ build/outputs/apk/TesterLib-debug-androidTestunaligned.apk /data/local/tmp/apimatic.hopto.org.test
+    - adb wait-for-device shell pm install -r "/data/ local/tmp/apimatic.hopto.org.test"
+    - adb wait-for-device shell am instrument -w -r   -e package apimatic.hopto.org -e debug false apimatic.hopto.org.test/ android.support.test.runner.AndroidJUnitRunner
