--- a/circle.yml
+++ b/circle.yml
@@ -9,12 +9,12 @@ dependencies:
   cache_directories:
     - ~/.android
     - ~/android
-  override:  
-    - echo no | android create avd --force -n test -t android-19 --abi armeabi-v7a
 test:
   pre:
-    - emulator -avd test -no-skin -no-audio -no-window &
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 &
+    - emulator -avd circleci-android22 -no-audio -no-window:
+        background: true
+        parallel: true
+    - circle-android wait-for-boot
   override:
+    - gradle wrapper
     - ./gradlew connectedAndroidTest -i
