--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,8 @@ dependencies:
   cache_directories:
     - ~/.android
     - ~/android
+  override:
+    - gradle wrapper
 test:
   pre:
     - emulator -avd circleci-android22 -no-audio -no-window:
@@ -16,5 +18,4 @@ test:
         parallel: true
     - circle-android wait-for-boot
   override:
-    - gradle wrapper
     - ./gradlew connectedAndroidTest -i
