--- a/circle.yml
+++ b/circle.yml
@@ -1,13 +1,13 @@
 # Circle CI should automatically run the tests.
 # For configuration options, visit: https://circleci.com/docs/configuration/
 machine:
-  android:
-    android-19
   environment:
     ANDROID_HOME: /home/ubuntu/android
   java:
     version: oraclejdk7
 dependencies:
+   override:
+        - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-19.1.0,android-19,extra-google-m2repository,extra-google-google_play_services,extra-android-support
   cache_directories:
     - ~/.android
     - ~/android
